--- a/.eslintignore
+++ b/.eslintignore
@@ -15,6 +15,10 @@ app/ui/client/lib/customEventPolyfill.js
 app/ui/client/lib/Modernizr.js
 public/mp3-realtime-worker.js
 public/lame.min.js
+public/manifest.json
+public/OneSignalSDKUpdaterWorker.js
+public/OneSignalSDKUpdaterWorker.js
+public/OneSignalSDKWorker.js
 public/packages/rocketchat_videobridge/client/public/external_api.js
 packages/tap-i18n/lib/tap_i18next/tap_i18next-1.7.3.js
 private/moment-locales/
